<resources>
    <string name="app_name">Gym Trainer</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="create">Register</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_pass_str">If you have forgotten your password, please enter your  email address below and click \'Reset Password\'  button. You will receive an email that contains a link to reset a new password.</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="forgot_password_str">Forgot Your Password?</string>
    <string name="enter_email">Enter your email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_email">Username/Email</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="return_to_login_page">Back to Login</string>
    <string name="have_Account">Already have an account.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="valid_error_name">Please enter your name.</string>
    <string name="error_email">Please enter the email.</string>
    <string name="valid_error_valid_email">Please enter the valid email.</string>
    <string name="error_password">Please enter the password.</string>
    <string name="valid_password">Please enter the password greater than 5 characters.</string>
    <string name="spinner">Please select staff type.</string>
    <string name="plzSelectStaffname">Please select staff name.</string>
    <string name="Press_once_again_to_exit">Press once again to exit.</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gym Solution</string>
    <string name="nav_header_subtitle">gym_solution@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_enquiry">Enquiry</string>
    <string name="action_profile">Profile</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="registration">Registration</string>
    <string name="setting">Setting</string>
    <string name="inventory">Inventory</string>
    <string name="accounting">Accounting</string>
    <string name="Enquiry">Enquiry</string>
    <string name="trainer_employee">Trainer/Employee</string>
    <string name="renew">Renew</string>
    <string name="member_group">Member Group</string>
    <string name="Member_group">Member Group</string>
    <string name="member">Member</string>
    <string name="member_attendance">Member Attendance</string>
    <string name="employee_attendance">Employee Attendance</string>
    <string name="duratio_setting">Duration Setting</string>
    <string name="workout_category">Workout Category</string>
    <string name="workout_exercise">Workout Exercise</string>
    <string name="titleworkout_exercise_list">Workout Exercise List</string>
    <string name="gym_activity">Gym Activity</string>
    <string name="gym_package">Gym Package</string>
    <string name="profile">Profile</string>
    <string name="duration_period">Duration Period</string>
    <string name="duration">Duration</string>
    <string name="period_type">Period Type</string>
    <string name="add">Add</string>
    <string name="plz_enter_the_duration">Please enter the duration.</string>
    <string name="plz_select_the_duration">Please select the duration.</string>
    <string name="plz_select_the_period">Please select the period.</string>
    <string name="body_part">Body Part</string>
    <string name="plz_enter_body_part">Please enter the body part.</string>
    <string name="plz_select_body_part">Please select the body part.</string>
    <string name="workout_name">Workout Name</string>
    <string name="plz_enter_the_exercise">Please enter the workout name.</string>
    <string name="gym_equipment">Add Equipment</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="add_product">Add Product</string>
    <string name="sell_product">Sell Product</string>
    <string name="stock_management">Stock Management</string>
    <string name="suppliers">Supplier List</string>
    <string name="expense_master">Expense Master</string>
    <string name="package_payment_history">Package Payment History</string>
    <string name="salary_management">Salary Management</string>
    <string name="membership_payment">Membership Payment</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="transaction_report">Transaction Report</string>
    <string name="title_activity_renew">Members Renewals List</string>
    <string name="Bio_Matric_ID">Bio Matric ID</string>
    <string name="staff_type">Staff Type</string>
    <string name="staff_name">Staff Name</string>
    <string name="staff_list">Staff List</string>
    <string name="add_staff">Add Staff</string>
    <string name="all">All</string>
    <string name="name_id">Name/ID</string>
    <string name="full_name">Full Name *</string>
    <string name="Full_Name">Full Name </string>
    <string name="contact_no">Phone *</string>
    <string name="email">Email</string>
    <string name="email_id">Email *</string>
    <string name="state">State</string>
    <string name="city">City *</string>
    <string name="address">Address</string>
    <string name="Salary">Salary </string>
    <string name="personal_training_charge">Training Charge *</string>
    <string name="birthday">Date of Birth</string>
    <string name="date_of_joning">Date of Joining *</string>
    <string name="gender">Gender</string>
    <string name="memberType">Member Type</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="update">update</string>
    <string name="picture_was_not_taken">Picture was not taken</string>
    <string name="individual">Individual</string>
    <string name="group">Group</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="title_activity_member__group">Group List</string>
    <string name="title_activity_upcoming_renew_list">Renew Member</string>
    <string name="plz_select_membertype_package">Please select Member Type and Package.</string>
    <string name="plz_select_month_year">Please select Month and Year.</string>
    <string name="plz_select_batch">Please select Batch.</string>
    <string name="plz_select_marital_status">Please select marital status.</string>
    <string name="plz_select_member_group">Please select memeber group.</string>
    <string name="group_name">Group Name</string>
    <string name="contact_person">Contact Person Name</string>
    <string name="total_member">Total members</string>
    <string name="Contact_no">Phone</string>
    <string name="Mobile_NO">Mobile No</string>
    <string name="Email_id">Email-Id</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="Address">Address</string>
    <string name="selectPackage">Select Package</string>
    <string name="Package">Package</string>
    <string name="Select_Package">Select Package</string>
    <string name="Package_amount">Package Charge :</string>
    <string name="total_amount">Total Amount</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="trainer">Trainer</string>
    <string name="trainer_charge">Trainer Charge :</string>
    <string name="submit">Submit</string>
    <string name="title_activity_add_group">Add Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="title_activity_member__list">Member List</string>
    <string name="member_name">Member Name/Contact No.</string>
    <string name="title_activity_add_member_details">Add Member</string>
    <string name="members_payment">Member Payment</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="batch">Batch</string>
    <string name="membertype">Member Type</string>
    <string name="member_Name">Member Name</string>
    <string name="marital_status">Marital Status</string>
    <string name="Birthday"> Date of Birth</string>
    <string name="Date_of_joning">Date of Joining</string>
    <string name="savenext">Save &amp; Next</string>
    <string name="next">Next</string>
    <string name="title_activity_member__attendance">Member Attendance</string>
    <string name="title_activity_add_member_attendance">Add Member Attendance</string>
    <string name="title_activity_employee__attendance">Staff Attendance</string>
    <string name="title_activity_add_employee__attendance">Add Employee Attendance </string>
    <string name="plz_enter_name">Please enter the name.</string>
    <string name="plz_enter_full_name">Please enter the full name.</string>
    <string name="plz_enter_contact_no">Please enter the contact number.</string>
    <string name="plz_enter_valid_contact_no">Please enter the valid contact number.</string>
    <string name="plz_enter_group_name">Please enter the group name.</string>
    <string name="plz_enter_contact_person">Please enter the contact person.</string>
    <string name="plz_enter_training_charge">Please enter the training charge.</string>
    <string name="plz_enter_email">Please enter the email.</string>
    <string name="valid_email">Valid email Address.</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="plz_enter_address">Please enter the address.</string>
    <string name="plz_enter_city">Please enter the city.</string>
    <string name="plz_enter_state">Please enter the state.</string>
    <string name="plz_enter_totol_members">Please enter the total member.</string>
    <string name="plz_select_package">Please select the package.</string>
    <string name="plz_select_status">Please select the status.</string>
    <string name="plz_select_birthdate">Please select the birthdate.</string>
    <string name="plz_select_dateOfEqnuiry">Please select the Date of Enquiry.</string>
    <string name="plz_select_date_of_joning">Please select the joining date.</string>
    <string name="title_activity_duration__period"> Add Package / Activity Duration</string>
    <string name="title_activity_workout__category"> Add Workout Category</string>
    <string name="title_activity_workout__exercise">Add Workout Exercise</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_individual_payment">Individual Member Payment</string>
    <string name="gymName">Gym Name</string>
    <string name="gymEmail">Gym Email</string>
    <string name="currenceType">Currency Type (Ex. INR,USD)</string>
    <string name="investmentAmount">Investment Amount</string>
    <string name="invoiceTerms">Invoise Terms</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="Training_Schedule">Training Schedule</string>
    <string name="workout">Workout</string>
    <string name="set">Set</string>
    <string name="weekDays">Week Days</string>
    <string name="minutes">Minutes</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="dietTrainingschedule">Diet/Training Schedule</string>
</resources>