<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/registration_nav"
            android:title="@string/registration"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting_nav"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/inventory_nav"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_accounting"
            android:icon="@drawable/accounting_nav"
            android:title="@string/accounting" />
        <item
            android:id="@+id/nav_dietTrainingSchedule"
            android:icon="@drawable/accounting_nav"
            android:title="@string/dietTrainingschedule" />
        <item
            android:id="@+id/nav_enquiry"
            android:icon="@drawable/accounting_nav"
            android:title="@string/Enquiry" />

    </group>

</menu>
