<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TrainingSchedule_Activity"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/linearLayout"

    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/darkYellow"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Training_Schedule"
            android:textColor="@color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center_horizontal" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/fifteen_dp"
    android:layout_marginEnd="@dimen/fifteen_dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/name"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/black"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:text="*"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/red"
            />
    </LinearLayout>
    <Spinner
        android:id="@+id/nameSpinner"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourtyfive"
        android:layout_marginTop="@dimen/five_dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/weekDays"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/black"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:text="*"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/red"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ten_dp"
        android:weightSum="3"
        >
    <CheckBox
        android:id="@+id/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Monday"
        android:layout_weight="1"
        android:buttonTint="@color/darkYellow"
        />

    <CheckBox
        android:id="@+id/tuesdeay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tuesday"
        android:layout_weight="1"
        android:buttonTint="@color/darkYellow"
        />

    <CheckBox
        android:id="@+id/wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wednesday"
        android:layout_weight="1"
        android:buttonTint="@color/darkYellow"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ten_dp"
        android:weightSum="3"
        >
    <CheckBox
        android:id="@+id/thrusday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Thursday"
        android:layout_weight="1"
        android:buttonTint="@color/darkYellow"

        />

    <CheckBox
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        android:layout_weight="1"
        android:buttonTint="@color/darkYellow"

        />

    <CheckBox
        android:id="@+id/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Saturday"
        android:layout_weight="1"
        android:buttonTint="@color/darkYellow"
        />
    </LinearLayout>
    <CheckBox
        android:id="@+id/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:text="@string/Sunday"
        android:buttonTint="@color/darkYellow"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/body_part"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/black"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:text="*"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/red"
            />
    </LinearLayout>
    <Spinner
        android:id="@+id/Spinnerbody_part_name"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourtyfive"
        android:layout_marginTop="@dimen/five_dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/workout"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/black"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:text="*"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/red"
            />
    </LinearLayout>
    <Spinner
        android:id="@+id/Spinnerworkout"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourtyfive"
        android:layout_marginTop="@dimen/five_dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/set"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/black"
            />

    </LinearLayout>
    <Spinner
        android:id="@+id/SetSpinner"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourtyfive"
        android:layout_marginTop="@dimen/five_dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/minutes"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/black"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:text="*"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/red"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/minutes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:maxLength="2"
        android:inputType="number"
        android:textColor="@color/black"
        android:theme="@style/InputLabel"
        android:background="@drawable/rounded_corner_for_payments"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourtyfive"
        android:layout_marginTop="@dimen/fifty_dp"
        android:layout_marginBottom="@dimen/thirty_dp"
        android:layout_marginStart="@dimen/fifteen_dp"
        android:layout_marginEnd="@dimen/fifteen_dp"
        android:background="@drawable/round_yellow_button"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/seventeen_sp"/>

</LinearLayout>
    </ScrollView>
</LinearLayout>