<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity"
    android:id="@+id/forgot_layout"
    android:focusableInTouchMode="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/sixty_dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_password_str"
                android:textColor="@color/black"
                android:textSize="@dimen/thirty_sp"
                android:layout_marginBottom="@dimen/fifty_dp"
                android:textStyle="bold" />


            <TextView

                android:id="@+id/mesg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:layout_marginTop="@dimen/seventy_dp"
                android:gravity="center"
                android:text="@string/forgot_pass_str"
                android:textColor="@color/black"
                android:textSize="@dimen/seventeen_sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fourty"
                android:layout_marginEnd="@dimen/fourty"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/thirty_dp"
                android:layout_marginBottom="@dimen/thirty_dp"
                android:background="@drawable/trasnsparent_round_shape"
                >

                <EditText
                    android:id="@+id/email_id"
                    android:layout_width="270dp"
                    android:layout_height="@dimen/fourtyfive"
                    android:paddingLeft="@dimen/ten_dp"
                    android:paddingRight="@dimen/fifteen_dp"
                    android:textCursorDrawable="@drawable/yellow_cursor_color"
                    android:drawableLeft="@drawable/username_icon"
                    android:drawablePadding="@dimen/five_dp"
                    android:backgroundTint="@color/transparant"
                    android:ems="10"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress" />


            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_btn"
                android:layout_marginStart="@dimen/fourty"
                android:layout_marginEnd="@dimen/fourty"
                android:layout_marginTop="@dimen/twenty_dp"
                >

                <Button
                    android:id="@+id/button_forgot"
                    android:layout_width="270dp"
                    android:layout_height="50dp"
                    android:background="@color/transparant"
                    android:text="@string/reset_password"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/twenty_sp"
                    />
                <ProgressBar
                    android:id="@+id/pb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:theme="@style/WhiteAccent"

                    />

            </FrameLayout>
            <TextView
                android:padding="@dimen/ten_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fourty"
                android:layout_marginRight="@dimen/fourty"
                android:layout_gravity="center_horizontal"
                android:text="@string/return_to_login_page"
                android:textSize="@dimen/fifteen_sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
