<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Transaction_Report_Activity"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:id="@+id/linear_layout"
    >


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/darkYellow"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:orientation="horizontal"
        android:gravity="center">
        >
        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="@color/darkYellow"
            android:textSize="@dimen/fifteen_sp"
            />
        <TextView
            android:id="@+id/yeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/one_twenty_dp"
            android:text="@string/year"
            android:textColor="@color/darkYellow"
            android:textSize="@dimen/fifteen_sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:gravity="center">

        <Spinner
            android:id="@+id/month_spinner"
            style="@style/spinner_style"
            android:layout_width="@dimen/one_fifty_dp"
            android:layout_height="@dimen/thirtyfive_dp"
            android:layout_marginStart="@dimen/thirty_dp"
            android:layout_marginTop="@dimen/five_dp" />

        <Spinner
            android:id="@+id/year_spinner"
            style="@style/spinner_style"
            android:layout_width="@dimen/one_fifty_dp"
            android:layout_height="@dimen/thirtyfive_dp"
            android:layout_marginStart="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginEnd="@dimen/thirty_dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/one_eighty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginStart="@dimen/thirty_dp"
            android:theme="@style/InputLabel">

            <EditText
                android:id="@+id/name"
                android:layout_width="@dimen/one_eighty_dp"
                android:layout_height="@dimen/fourtyfive"
                android:hint="@string/transaction_type"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"

                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourtyfive"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginStart="@dimen/seventeen_dp"
            android:layout_marginEnd="@dimen/thirty_dp"
            android:background="@drawable/round_yellow_button"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:shadowColor="@color/grey"
            android:textSize="@dimen/seventeen_sp"
            />
    </LinearLayout>

</LinearLayout>